more functions for the lcia-geo tool