@@ -1,8 +1,10 @@
 package org.openlca.app.editors.lcia.geo;
 
+import org.eclipse.jface.dialogs.InputDialog;
 import org.eclipse.jface.viewers.ITableLabelProvider;
 import org.eclipse.jface.viewers.LabelProvider;
 import org.eclipse.jface.viewers.TableViewer;
+import org.eclipse.jface.window.Window;
 import org.eclipse.swt.graphics.Image;
 import org.eclipse.swt.widgets.Composite;
 import org.eclipse.ui.forms.widgets.FormToolkit;
@@ -18,6 +20,7 @@ import org.openlca.app.util.Actions;
 import org.openlca.app.util.Labels;
 import org.openlca.app.util.MsgBox;
 import org.openlca.app.util.Numbers;
+import org.openlca.app.util.Question;
 import org.openlca.app.util.UI;
 import org.openlca.app.viewers.Viewers;
 import org.openlca.app.viewers.tables.Tables;
@@ -26,15 +29,19 @@ import org.openlca.core.database.FlowDao;
 import org.openlca.core.database.LocationDao;
 import org.openlca.core.model.Flow;
 import org.openlca.core.model.ImpactFactor;
+import org.openlca.core.model.Location;
 import org.openlca.core.model.ModelType;
 import org.openlca.core.model.Parameter;
 import org.openlca.geo.lcia.GeoFactorCalculator;
 import org.openlca.geo.lcia.GeoFlowBinding;
 import org.openlca.io.CategoryPath;
+import org.openlca.util.Strings;
 
 import java.util.Collections;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Objects;
+import java.util.Set;
 import java.util.concurrent.atomic.AtomicReference;
 import java.util.stream.Collectors;
 
@@ -70,9 +77,19 @@ class GeoFlowSection {
 
 		// bind actions
 		var add = Actions.onAdd(this::onAdd);
+		var createForUsed = Actions.create(
+				"Create for used flows",
+				Icon.EDIT.descriptor(),
+				this::onCreateForUsedFlows);
+		createForUsed.setToolTipText(
+				"Creates flow bindings for all flows used in this impact category");
 		var remove = Actions.onRemove(this::onRemove);
 		var calc = Actions.onCalculate(this::onCalculate);
-		Actions.bind(table, add, remove, calc);
+		var calcMissing = Actions.create(
+				"Calculate all missing locations",
+				Icon.ANALYSIS_RESULT.descriptor(),
+				this::onCalculateAllMissing);
+		Actions.bind(table, add, createForUsed, remove, calc, calcMissing);
 		Actions.bind(section, add, remove, calc);
 	}
 
@@ -114,23 +131,54 @@ class GeoFlowSection {
 		table.setInput(page.setup.bindings);
 	}
 
+	private void onCreateForUsedFlows() {
+		Set<Flow> flows = App.exec("Collect flows", () -> {
+			if (page.setup == null)
+				return Collections.emptySet();
+			var existing = page.setup.bindings.stream()
+					.filter(b -> b.flow != null)
+					.map(b -> b.flow)
+					.collect(Collectors.toSet());
+			var impact = page.editor.getModel();
+			var fs = new HashSet<Flow>();
+			for (var f : impact.impactFactors) {
+				if (f.flow == null || existing.contains(f.flow))
+					continue;
+				fs.add(f.flow);
+			}
+			return fs;
+		});
+
+		if (flows.isEmpty()) {
+			MsgBox.info("No flows found",
+					"There are no flows in the characterization " +
+							"factors that do not have a binding yet");
+			return;
+		}
+
+		var dialog = new InputDialog(UI.shell(),
+				"Provide a default formula",
+				"Please provide a default formula that " +
+						"should be used for the new bindings",
+				"1", null);
+		if (dialog.open() != Window.OK)
+			return;
+		var formula = dialog.getValue();
+		if (Strings.nullOrEmpty(formula)) {
+			formula = "1";
+		}
+
+		for (var flow : flows) {
+			var binding = new GeoFlowBinding(flow);
+			binding.formula = formula;
+			page.setup.bindings.add(binding);
+		}
+		table.setInput(page.setup.bindings);
+	}
+
 	private void onCalculate() {
-		var setup = page.setup;
-		if (setup == null) {
-			MsgBox.error("Invalid calculation setup",
-					"No GeoJSON file is selected.");
+		if (!canCalculate())
 			return;
-		}
-		if (setup.bindings.isEmpty()) {
-			MsgBox.error("Invalid calculation setup",
-					"No flow bindings are defined.");
-			return;
-		}
-		if (setup.features.isEmpty()) {
-			MsgBox.error("Invalid calculation setup",
-					"Could not find geographic features.");
-			return;
-		}
 
 		// select the locations
 		var locs = ModelSelector.multiSelect(ModelType.LOCATION);
@@ -140,14 +188,70 @@ class GeoFlowSection {
 		var locations = locs.stream()
 				.map(d -> locDao.getForId(d.id))
 				.filter(Objects::nonNull)
-				.collect(Collectors.toList());
+				.toList();
 
+		runCalculation(locations);
+	}
+
+	private void onCalculateAllMissing() {
+		if (!canCalculate())
+			return;
+		var locations = App.exec("Collect locations", () -> {
+			var dao = new LocationDao(Database.get());
+			var used = page.editor.getModel()
+					.impactFactors.stream()
+					.filter(f -> f.location != null)
+					.map(f -> f.location.id)
+					.collect(Collectors.toSet());
+			return dao.getDescriptors()
+					.stream()
+					.filter(d -> !used.contains(d.id))
+					.map(d -> dao.getForId(d.id))
+					.filter(loc -> loc.geodata != null && loc.geodata.length > 0)
+					.toList();
+		});
+
+		if (locations.isEmpty()) {
+			MsgBox.info(
+					"No locations found",
+					"No locations with geo-data which are not already " +
+							"present in the CFs could be found.");
+			return;
+		}
+		var b = Question.ask("Run calculation?",
+				"Calculate factors for " + locations.size() + " additional locations?");
+		if (b) {
+			runCalculation(locations);
+		}
+	}
+
+	private void runCalculation(List<Location> locations) {
 		var calc = GeoFactorCalculator.of(
 				Database.get(), page.setup, locations);
 		var factors = new AtomicReference<List<ImpactFactor>>();
 		App.runWithProgress("Calculate regionalized factors",
 				() -> factors.set(calc.calculate()),
 				() -> GeoFactorDialog.open(page, factors.get()));
+	}
+
+	private boolean canCalculate() {
+		var setup = page.setup;
+		if (setup == null) {
+			MsgBox.error("Invalid calculation setup",
+					"No GeoJSON file is selected.");
+			return false;
+		}
+		if (setup.bindings.isEmpty()) {
+			MsgBox.error("Invalid calculation setup",
+					"No flow bindings are defined.");
+			return false;
+		}
+		if (setup.features.isEmpty()) {
+			MsgBox.error("Invalid calculation setup",
+					"Could not find geographic features.");
+			return false;
+		}
+		return true;
 	}
 
 	void update() {
